<resources>
    <string name="app_name">碳微觀指</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Analysis">用量分析</string>
    <string name="grade">成就</string>
    <string name="info">低碳新知</string>
    <string name="Tools">快捷工具</string>
    <string name="snackbar_shared_msg">snackbar_shared_msg</string>
    <string name="view">view</string>

    <string name="transport">交通</string>
    <string name="shopping">商品</string>
    <string name="service">服務</string>
    <string name="power">能資源</string>
    <string name="trash">廢棄物</string>
    <string name="self">自訂</string>


    <string name="all">All</string>
    <string name="createnote">Create note</string>
    <string name="closedrawer">Close drawer</string>
    <string name="favorites">Favorites</string>
    <string name="notes">Notes</string>
    <string name="opendrawer">Open drawer</string>
    <string name="photo">Photo</string>
    <string name="recording">Recording</string>
    <string name="refresh">Refresh</string>
    <string name="reminder">Reminder</string>
    <string name="search">Search</string>
    <string name="shared">Shared</string>
    <string name="sheet_item_pressed">Item pressed</string>
    <string name="Transport_kilometer">里程數</string>
    <string name="ticket_price">票價：</string>
    <string name="transport_choose">交通工具：</string>
    <string name="pay_way">支付方式：</string>
    <string name="TRA">台鐵車種：</string>
    <string name="OK">確認</string>
    <string name="label_description">一周碳足跡</string>
    <string name="todays_carbon_foot">今日碳足跡</string>
    <string name="co2_of_week">一周碳足跡</string>
    <string name="fuel">燃料</string>
    <string name="water">水資源</string>
    <string name="elec">電力</string>
    <string name="waste">廢棄物</string>
    <string name="commodity">商品</string>
    <string name="qr_code_scan">電子發票 QR code</string>
    <string name="marquee_text">台灣年碳排放量約為249.4百萬公噸，也就是一整年下來需要6412座大安森林公園才能完全吸收</string>
    <string name="DB_path">/data/data/com.nian.carbout/databases</string>

</resources>
