<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".energy.EnergyActivity"
    android:background="@drawable/background">


    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbarEnergy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:singleLine="true"
            android:textColor="@color/background_card"
            android:text="@string/power"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>



    <android.support.v7.widget.CardView
        android:id="@+id/cardView_of_category"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardUseCompatPadding="true"
        app:cardElevation="2dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarEnergy">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="能源類型"
                android:textSize="@dimen/normal_textsize"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"/>

            <RadioGroup
                android:id="@+id/energy_category_RadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:divider="?android:attr/dividerHorizontal"
                android:showDividers="middle">


                <RadioButton
                    android:id="@+id/water"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:checked="true"
                    android:onClick="onSelect"
                    android:text="@string/water"
                    android:textSize="@dimen/normal_textsize"
                    />

                <RadioButton
                    android:id="@+id/power"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:onClick="onSelect"
                    android:text="@string/elec"
                    android:textSize="@dimen/normal_textsize" />


                <RadioButton
                    android:id="@+id/fuel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:onClick="onSelect"
                    android:text="@string/fuel"
                    android:textSize="@dimen/normal_textsize" />

            </RadioGroup>

        </LinearLayout>





    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/cardView_of_category"
        tools:layout_editor_absoluteX="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:text="詳細資料"
                android:textSize="@dimen/normal_textsize" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/energy_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="能源細項"
                    android:textColor="@color/theme_primary_dark2"
                    android:textSize="@dimen/normal_textsize" />

                <Spinner
                    android:id="@+id/spinner_choose_energy_detail"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"
                    android:spinnerMode="dialog" />


            </LinearLayout>


            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="用量"
                    android:textColor="@color/theme_primary_dark2"
                    android:textSize="@dimen/normal_textsize" />

                <EditText
                    android:id="@+id/edit_energy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="11"
                    android:inputType="number" />


            </LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button_in_energy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/OK"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <Button
        android:id="@+id/button_in_energy_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:backgroundTint="@color/background_card"
        android:text="取消"
        app:layout_constraintEnd_toStartOf="@+id/button_in_energy"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />


</android.support.constraint.ConstraintLayout>